BoilerPlateOrg/force-app/logging/default/objects/System_Log__c/System_Log__c.object-meta.xml
<CustomObject>
    <description>Logging object to store messages generated by Apex or Integrations.
    Documentation on usage can be found here:
        https://makepositive.atlassian.net/wiki/spaces/DEV/pages/1195180104/Logging    
    </description>
    <label>System Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>Level__c</columns>
        <columns>Message__c</columns>
        <columns>Class__c</columns>
        <columns>Method__c</columns>
        <columns>Related_Record_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Apex</fullName>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>Level__c</columns>
        <columns>Message__c</columns>
        <columns>Class__c</columns>
        <columns>Method__c</columns>
        <columns>Related_Record_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Apex</value>
        </filters>
        <label>Apex</label>
    </listViews>
    <listViews>
        <fullName>Errors</fullName>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>Level__c</columns>
        <columns>Message__c</columns>
        <columns>Class__c</columns>
        <columns>Method__c</columns>
        <columns>Related_Record_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Level__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>Errors</label>
    </listViews>
    <listViews>
        <fullName>Info</fullName>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>Level__c</columns>
        <columns>Message__c</columns>
        <columns>Class__c</columns>
        <columns>Method__c</columns>
        <columns>Related_Record_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Level__c</field>
            <operation>equals</operation>
            <value>Info</value>
        </filters>
        <label>Info</label>
    </listViews>
    <listViews>
        <fullName>Integration</fullName>
        <columns>NAME</columns>
        <columns>Level__c</columns>
        <columns>Reference__c</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Integration</value>
        </filters>
        <label>Integration</label>
    </listViews>
    <listViews>
        <fullName>Warning</fullName>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>Level__c</columns>
        <columns>Message__c</columns>
        <columns>Class__c</columns>
        <columns>Method__c</columns>
        <columns>Related_Record_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Level__c</field>
            <operation>equals</operation>
            <value>Warning</value>
        </filters>
        <label>Warning</label>
    </listViews>
    <nameField>
        <displayFormat>SL-{00000000}</displayFormat>
        <label>System Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>