BoilerPlateOrg/force-app/logging/default/objects/System_Log__c/fields/Level__c.field-meta.xml
<fields>
    <fullName>Level__c</fullName>
    <description>Message level</description>
    <inlineHelpText>Message level</inlineHelpText>
    <label>Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>