BoilerPlateOrg/force-app/logging/default/objects/System_Log__c/fields/Message__c.field-meta.xml
<fields>
    <fullName>Message__c</fullName>
    <description>Full message details</description>
    <inlineHelpText>Full message details</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</fields>