BoilerPlateOrg/force-app/logging/default/objects/System_Log__c/fields/Reference__c.field-meta.xml
<fields>
    <fullName>Reference__c</fullName>
    <description>Error identifier</description>
    <inlineHelpText>Error identifier</inlineHelpText>
    <label>Reference</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</fields>