BoilerPlateOrg/force-app/logging/default/objects/System_Log__c/fields/Related_Record__c.field-meta.xml
<fields>
    <fullName>Related_Record__c</fullName>
    <description>Link to related record</description>
    <formula>IF (NOT(ISBLANK(Related_Record_Id__c)), HYPERLINK(&quot;/&quot; &amp;  Related_Record_Id__c, &quot;Open Related Record&quot;), &quot;&quot;)</formula>
    <inlineHelpText>Link to related record</inlineHelpText>
    <label>Related Record</label>
    <type>Text</type>
</fields>