BoilerPlateOrg/force-app/logging/default/objects/System_Log__c/fields/Related_Record_Id__c.field-meta.xml
<fields>
    <fullName>Related_Record_Id__c</fullName>
    <description>Id of record related to message</description>
    <inlineHelpText>Id of record related to message</inlineHelpText>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</fields>