BoilerPlateOrg/force-app/logging/default/objects/System_Log__c/fields/Source__c.field-meta.xml
<fields>
    <fullName>Source__c</fullName>
    <description>Source of message</description>
    <inlineHelpText>Source of message</inlineHelpText>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>